<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WooSearch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="searchbox">Search</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_title">Error!</string>
    <string name="login_error_message">Please make sure you enter a correct email and password!</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="logout_label">Logout</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="message_hint">Enter Message</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="imbdbrating">IMDB Rating: </string>
    <string name="woorating">WooSearch Rating: </string>
    <string name="giveapprating">Give Your Rating: </string>
    <string name="submit">Submit</string>
    <string name="foodrating">Rating:</string>
</resources>
