<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:gravity="center">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:gravity="center">
      </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:layout_alignParentStart="true"
        android:textColor="#000"
        android:background="#91ffffff"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:id="@+id/signup"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="#91ffffff"
        android:layout_marginTop="5dp"
        android:gravity="center" />

</RelativeLayout>
