<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".MainActivity"
    android:id="@+id/layout"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvWelcome"
            android:layout_alignBottom="@+id/text"
            android:layout_centerHorizontal="true"
            android:textColor="#fff"
            android:layout_marginLeft="15dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Logout"
            android:id="@+id/btnLogout"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#91ffffff"
            android:textColor="#000"
            android:layout_margin="2dp" />
    </LinearLayout>


    <EditText
        android:id="@+id/text_search_box"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#fff"
        android:autoText="true"
        android:layout_below="@+id/btnLogout"
        android:layout_alignParentStart="true"
        android:layout_margin="2dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/search"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/text_search_box"
        android:layout_alignStart="@+id/tvWelcome"
        android:text="@string/searchbox"
        android:textColor="#000"
        android:background="#91ffffff"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textColor="#fff7fff9"
        android:textSize="16dp"
        android:layout_toStartOf="@+id/tvWelcome"
        android:layout_alignEnd="@+id/btnLogout"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:id="@+id/image1"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="175dp"
            android:layout_height="42dp"
            android:id="@+id/ratetext"
            android:textColor="#fff7fff9"
            android:textSize="16dp"
            android:text="@string/imbdbrating"
            android:layout_toStartOf="@+id/tvWelcome"
            android:layout_alignEnd="@+id/btnLogout"
            android:layout_marginLeft="15dp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:isIndicator="true"
            android:numStars="10"
            android:stepSize="1"
            android:rating="0"
            android:id="@+id/pop_ratingbar"
            style="?android:attr/ratingBarStyleSmall"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="175dp"
            android:layout_height="42dp"
            android:text="@string/woorating"
            android:id="@+id/wooRating"
            android:textColor="#fff"
            android:textSize="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:isIndicator="true"
            android:numStars="10"
            android:stepSize="1"
            android:id="@+id/appRating"
            android:clickable="false"
            android:layout_marginTop="5dp"
            android:focusableInTouchMode="false"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:clickable="true">

        <TextView
            android:layout_width="175dp"
            android:layout_height="42dp"
            android:id="@+id/giveRate"
            android:textColor="#fff7fff9"
            android:textSize="16dp"
            android:layout_toStartOf="@+id/tvWelcome"
            android:layout_alignEnd="@+id/btnLogout"
            android:text="@string/giveapprating"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:isIndicator="false"
            android:numStars="10"
            android:stepSize="1"
            android:id="@+id/giveStar"
            android:clickable="true"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:focusableInTouchMode="false" />
    </LinearLayout>

    <Button
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:text="@string/submit"
        android:id="@+id/rateSubmit"
        android:textColor="#000"
        android:background="#91ffffff"
        android:layout_marginLeft="15dp" />

</LinearLayout>